--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@eslint/js": "^9.10.0",
     "@stylistic/eslint-plugin": "^5.1.0",
     "@vitest/eslint-plugin": "^1.1.0",
-    "typescript": "5.8.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.4.0",
     "vitest": "^3.0.5"
   }
