--- a/package.json
+++ b/package.json
@@ -5,11 +5,6 @@
   "license": "BSD-3-Clause",
   "type": "module",
   "scripts": {
-    "deploy": "devvit upload",
-    "dev": "dotenv -e .env -- devvit playtest",
-    "login": "devvit login",
-    "launch": "devvit publish",
-    "type-check": "tsc --build",
     "test": "npm run test:unit",
     "test:unit": "vitest --run"
   },
@@ -25,9 +20,7 @@
     "@eslint/js": "^9.10.0",
     "@stylistic/eslint-plugin": "^5.1.0",
     "@vitest/eslint-plugin": "^1.1.0",
-    "devvit": "0.12.0",
-    "dotenv-cli": "8.0.0",
-    "typescript": "5.8.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.4.0",
     "vitest": "^3.0.5"
   }
